# surrealdb-bug

./: Cargo.toml  rustfmt.toml  stops.json
src/: main.rs  schema.surql
